test/should-fail/jfxc3395.visage
/**
 * Regress test for JFXC-3395: An internal error has occurred in the OpenJFX compiler
 *
 * @test/compile-error
 */

var s:String;
jfxc3395{s:""};
